test_suite/alan-2022-examples/failing/004880_mutation.alan
source k begin leave u7_3a; * WO0 end
